# scrape-channels

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
channels/: items.py  middlewares.py  pipelines.py  settings.py  utils.py
channels/spiders/: Meteor.py  meteor.py  mobile01.py  ptt.py  youtube.py
