[tool.poetry]
name = "scrapy_by_script"
version = "0.1.0"
description = ""
authors = ["weifan <p988744@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Scrapy = "^2.6.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
